# call_me_maybe

./: .gitignore  Makefile  README.md  profile.html  profile.json  pyproject.toml
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
llm_sdk/: __init__.py
src/: __main__.py  generation.py  main.py  parser.py  test.py
