[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk>=1.0.1",
    "mypy>=1.19.1",
    "numpy>=1.26.4",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
llm_sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "llm_sdk"
]